merapikan dan mempercantik halaman

--- a/index.html
+++ b/index.html
@@ -20,25 +20,24 @@
     </header>
 
     <main>
-        <section class="home" id="home">
-            <h1>Selamat Datang di <span>Sky Page</span></h1>
-            <h2>Halaman ini akan menampilkan projek/latihan yang telah saya selesaikan</h2>
-            <button><a href="#project">Lihat Projek</a></button>
-        </section>
+            <section class="home" id="home">
+                <h1>Selamat Datang di <span>Sky Page</span></h1>
+                <h2>Halaman ini akan menampilkan projek/latihan yang telah saya selesaikan</h2>
+                <button><a href="#project">Lihat Projek</a></button>
+            </section>
 
-        <section class="about" id="about">
-            <h1>Saya merupakan mahasiswa</h1>
-            <h2>halaman ini menampilkan keterangan</h2>
-        </section>
-        
-        <div class="project" id="project">
-            <h1>Projek saya</h1>
-        </div>
+            <section class="about" id="about">
+                <h1>Saya merupakan mahasiswa</h1>
+                <h2>halaman ini menampilkan keterangan</h2>
+            </section>
+            
+            <section class="project" id="project">
+                <h1>Projek saya</h1>
+            </section>
 
-        <div class="contact" id="contact">
-            <h1>IG:faisalm__333</h1>
-
-        </div>
+            <section class="contact" id="contact">
+                <h1>IG:faisalm__333</h1>
+            </section>            
     </main>
 </body>
 </html>
