--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <li><a href="#project">Project</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <span class="menu" onclick="klik()"></span>
         </nav>
+
     </header>
 
     <main>
@@ -39,5 +41,7 @@
                 <h1>IG:faisalm__333</h1>
             </section>            
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
