--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
                 <div class="bar2"></div>
                 <div class="bar3"></div>
             </div>
+
         </nav>
+        <div class="dropdown">
+            <a href="#home" class="home">Home</a>
+            <a href="#about" class="about">About</a>
+            <a href="#project" class="project">Project</a>
+            <a href="#contact" class="contact">Contact</a>
+        </div>
     </header>
     <main>
             <section class="home" id="home">
