memperbaiki semantic, menambah transisi button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section class="home" id="home">
                 <h1>Selamat Datang di <span>Sky Page</span></h1>
                 <h2>Halaman ini akan menampilkan projek/latihan yang pernah saya coba</h2>
-                <button><a href="#project">Lihat Projek</a></button>
+                <button type="button" onclick="window.location.href='#project'">Lihat Projek</button>
             </section>
 
             <section class="about" id="about">
